# MiniLua

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  Doxyfile-mcss  LICENSE  MiniLua_8hpp.html  MiniLua_8hpp_source.html  README.md  allocator_8cpp.html  allocator_8hpp.html  allocator_8hpp_source.html  annotated.html  architecture.html  ast_8cpp.html  ast_8hpp.html  ast_8hpp_source.html  classLuaParser-members.html  classLuaParser.html  classes.html  classminilua_1_1BadArgumentError.html  classminilua_1_1CallContext-members.html  classminilua_1_1CallContext.html  classminilua_1_1CallResult-members.html  classminilua_1_1CallResult.html  classminilua_1_1Env-members.html  classminilua_1_1Env.html  classminilua_1_1Environment-members.html  classminilua_1_1Environment.html  classminilua_1_1Function-members.html  classminilua_1_1Function.html  classminilua_1_1Interpreter-members.html  classminilua_1_1Interpreter.html  classminilua_1_1InterpreterException-members.html  classminilua_1_1InterpreterException.html  classminilua_1_1MemoryAllocator-members.html  classminilua_1_1MemoryAllocator.html  (+611 more)
.github/workflows/: deploy_docs.yml  install_packages.sh  minilua.yml
bench/: CMakeLists.txt  cmake_install.cmake  tree-sitter.cpp  tree_sitter.cpp
cmake/: FindSanitizers.cmake  FindTreeSitterLua.cmake  FindTreeSitterWrapper.cmake  Tree-Sitter.cmake  add_FetchContent_MakeAvailable.cmake
examples/: CMakeLists.txt  cmake_install.cmake
examples/MiniluaGui/: CMakeLists.txt  main.cpp  minilua.cpp  minilua.hpp  minilua.ui
examples/MiniluaGui2/: CMakeLists.txt  minilua.cpp  minilua.hpp
examples/cli/: CMakeLists.txt  MiniLua-cli  cmake_install.cmake  main.cpp
examples/gui/: CMakeLists.txt  cmake_install.cmake  gui.cpp  moc_gui.cpp_parameters
examples/new_gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp
include/: environment.h  gui.h  luaast.h  luainterpreter.h  luaparser.h  operators.h  sourcechange.h  sourceexp.h  val.h
include/MiniLua/: MiniLua.hpp  allocator.hpp  environment.hpp  exceptions.hpp  file.hpp  interpreter.hpp  io.hpp  luaast.hpp  luainterpreter.hpp  luaparser.hpp  luatoken.hpp  math.hpp  metatables.hpp  operators.hpp  package.hpp  source_change.hpp  sourcechange.hpp  sourceexp.hpp  stdlib.hpp  string.hpp  table_functions.hpp  tree_sitter_ast.hpp  utils.hpp  val.hpp  values.hpp
include/tree-sitter/: tree-sitter.hpp
include/tree_sitter/: tree_sitter.hpp
luaPrograms/: HelplessHuman.lua  LottaLaps.lua
luaprograms/: BepposBalloons.lua  FragmeentedFurniture.lua  FragmentedFurniture_withoutMethods.lua  HelplessHuman.lua  LottaLaps.lua  counting_up.lua  errors.lua  loop.lua  luaToStringFunctionExample.lua  self.lua  simple.lua  simple_math.lua  test.lua
luaprograms/unit_tests/: assert.lua  counter.lua  local_variables.lua  metatables.lua  scopes.lua
luaprograms/unit_tests/errors/: stacktrace1.err  stacktrace1.lua
luaprograms/unit_tests/expressions/: binary_operations.lua  unary_operations.lua
luaprograms/unit_tests/io/: file.lua  inout.lua  reading.lua  tmpfile.lua  writing.lua
luaprograms/unit_tests/literals/: bools.lua  numbers.lua  string.lua  table.lua
luaprograms/unit_tests/metatables/: add.lua  arithmetic.lua  bitwise.lua  call.lua  comparison.lua  concat.lua  len.lua  tostring.lua
luaprograms/unit_tests/source_changes/: 1.lua  2.lua  add.lua  div.lua  idiv.lua  index.lua  mt_add.lua  mt_index.lua  mul.lua  newindex.lua  pow.lua  sub.lua
luaprograms/unit_tests/statements/: for_loops.lua  functions.lua  if.lua  repeat_until.lua  return.lua  while.lua
scripts/: _common.sh  _env.sh  _run_luatest.sh  bench.sh  bin.sh  build.sh  check_format.sh  docs.sh  flamegraph.sh  format.sh  gui_example.sh  gui_example_tim.sh  lint.sh  run_luatests.sh  setup_build.sh  test.sh  test_coverage.sh  update_luatest.sh  upload_coverage.sh
scripts/hooks/: pre-commit
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+119 more)
src/: CMakeLists.txt  allocator.cpp  architecture.md  cmake_install.cmake  environment.cpp  exceptions.cpp  file.cpp  index.md  internal_env.cpp  internal_env.hpp  interpreter.cpp  io.cpp  math.cpp  metatables.cpp  minilua.cpp  package.cpp  parse_literals.cpp  source_change.cpp  stdlib.cpp  string.cpp  table.cpp  table.hpp  table_functions.cpp  tree_sitter_lua.hpp  utils.cpp  values.cpp
src/cli/: main.cpp
src/core/: environment.cpp  luaast.cpp  luainterpreter.cpp  luaparser.cpp  luatoken.cpp  operators.cpp  sourcechange.cpp  sourceexp.cpp  stdlib.cpp  tree_sitter_ast.cpp  val.cpp  values.cpp
src/details/: ast.cpp  ast.hpp  desugar.cpp  gc.cpp  gc.hpp  interpreter.cpp  interpreter.hpp  tree_sitter_interop.cpp  tree_sitter_interop.hpp  utils.hpp
src/gui/: gui.cpp
src/lua/: stdlib.lua
src/tree-sitter/: tree-sitter.cpp
src/tree_sitter/: tree_sitter.cpp
tests/: CMakeLists.txt  cmake_install.cmake  gc.cpp  integration_tests.cpp  integration_tests2.cpp  lua_test_driver.cpp  lua_test_driver.hpp  lua_tests.cpp  math_tests.cpp  stdlib_tests.cpp  string_tests.cpp  table_functions_tests.cpp  tree-sitter.cpp  tree_sitter.cpp  tree_sitter_ast_tests.cpp  unit_tests.cpp
tests/docs/: CMakeLists.txt  writing_functions.cpp
tests/public_api/: environment.cpp  integration_tests.cpp  origin.cpp  owning_ptr.cpp  source_change.cpp  source_changes.cpp  unit_tests.cpp  values.cpp
